maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (!estFaceMur()) {
		gauche();
	}
	droite();

	while (!estSurBiscuit()) {
		if (getDirection() != Direction.NORD) {
			gauche();
			if (estFaceMur()) {
				while (estFaceMur()) {
					droite();
				}
				avance();
			} else {
				avance();
			} else if (getDirection() == Direction.NORD) {
		 	while(!estFaceMur) {
		 		avance();
		 	}
		 	droite();
		}
		}
	}
	prendBiscuit();
}
